[gd_scene load_steps=4 format=3 uid="uid://blbuqihsma4oy"]

[ext_resource type="Script" path="res://scripts/inventory_ui.gd" id="2_a7j5s"]
[ext_resource type="Texture2D" uid="uid://8mhhfp7a4r2t" path="res://sprites/inv_slot-new.png" id="2_q7isb"]
[ext_resource type="PackedScene" uid="uid://beu1tudtrtd1f" path="res://inventory_ui_slot.tscn" id="3_didwb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 599.0
offset_bottom = 350.0
scale = Vector2(2, 2)
script = ExtResource("2_a7j5s")

[node name="StatusContainer" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 141.0
offset_right = 254.0
offset_bottom = 200.0
texture = ExtResource("2_q7isb")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 1
patch_margin_top = 12
patch_margin_right = 1
patch_margin_bottom = 1

[node name="EquipmentSlot" parent="StatusContainer" instance=ExtResource("3_didwb")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 26.0
offset_right = 32.0
offset_bottom = 90.0
grow_horizontal = 2
type = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
offset_right = 133.0
offset_bottom = 200.0
columns = 2

[node name="InventorySlot" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2

[node name="InventorySlot2" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2

[node name="InventorySlot3" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2

[node name="InventorySlot4" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2

[node name="InventorySlot5" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2

[node name="InventorySlot6" parent="GridContainer" instance=ExtResource("3_didwb")]
layout_mode = 2
